✨ train model using mlflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+jupyter = "^1.0.0"
+pandas = "~2.0"
+numpy = "~1.25"
+nltk = "^3.8.1"
+gensim = "^4.3.2"
+mlflow = "^2.8.0"
 
 
 [build-system]
